# VocabVault

./: .gitignore  CHANGELOG.md  README.md
backend/: main.py  pyproject.toml  sql_app.db
backend/app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
backend/app/routers/: auth.py  post.py  user.py  word.py
backend/data/: Chinese All Characters (Frequency).csv  Chinese All Characters (General Standard).csv  Chinese All Characters (Merged).csv
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/css/: common.css
frontend/src/components/: AppHeader.vue  HelloWorld.vue  HomePage.vue
frontend/src/components/mods/: FlashCards.vue
frontend/src/components/user/: UserCard.vue  UserConnection.vue
frontend/src/plugins/: router.ts  vuetify.ts
frontend/src/plugins/store/: api.ts  app.ts  user.ts  word.ts
